--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -27,6 +27,13 @@
             </label>
             <input type="text" name="price" />    
         </div>
+
+        <div>    
+            <label for="imageUrl">
+                Image Url
+            </label>
+            <input type="text" name="imageUrl" />    
+        </div>
         
         <div>
             <input type="submit" value="Submit" />
