--- a/views/product-edit.ejs
+++ b/views/product-edit.ejs
@@ -10,6 +10,10 @@
                 <div>
                     <form method="post" action="/admin/product-update/<%= product._id %>">
                         <div>
+                            <input type="text" name="title" value="<%= product.title %>" />
+                        </div>
+
+                        <div>
                             <input type="text" name="description" value="<%= product.description %>" />
                         </div>
 
@@ -18,6 +22,11 @@
                         </div>
 
                         <div>
+                            <input type="text" name="imageUrl" value="<%= product.imageUrl %>" />
+                        </div>
+
+                        <div>
+                            <input type="hidden" value="<%= product._id %>" name="productId">
                             <input type="submit" value="save" />
                         </div>
                     </form>
